# project_billee_2025

./: .gitignore  README.md  build_container.bash  launch_container.bash
docker/: Dockerfile  entrypoint.sh
docs/onboarding/: 0 - How we use Git and GitHub.md  1 - ROS Concepts Nodes, Topics, and Services.md  2 - Docker.md  3 - 3rd Party Packages And ROS.md  design
docs/ros/: 1 - Intro to ROS: Nodes, Topics, and Services.md  1_intro_to_ros.md
env/: .ros2rc
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/manual_movement/lib/manual_movement/: converter
install/manual_movement/share/manual_movement/: package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/arm_sim/: CMakeLists.txt  package.xml
ros2_ws/src/arm_sim/config/: arm_sim.rviz
ros2_ws/src/arm_sim/description/: materials.xacro
ros2_ws/src/arm_sim/launch/: rsp.launch.py  rsp_sim.launch.py
ros2_ws/src/cam_test/: package.xml  setup.cfg  setup.py
ros2_ws/src/cam_test/cam_test/: cam_streamer.py  camera.py
ros2_ws/src/cam_test/launch/: cams.launch.py
ros2_ws/src/manual_movement/: package.xml  setup.cfg  setup.py
ros2_ws/src/manual_movement/launch/: mm_turtlesim.launch.py
ros2_ws/src/manual_movement/manual_movement/: converter.py
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/turtlebot/: CMakeLists.txt  package.xml
ros2_ws/src/usb_cam_test/: CMakeLists.txt  package.xml
(+33 files in other folders)
